--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -12,7 +12,7 @@
     <style>
       @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400&display=swap');
     </style>
-    <title>React Template</title>
+    <title>AbbyBnB</title>
     <!-- <link rel="apple-touch-icon" sizes="180x180" href="./favicon_io/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="./favicon_io/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="./favicon_io/favicon-16x16.png">
